# SDL2_Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/include/: Display.h  Game.h  Graph.h  Player.h  Texture.h
lib/src/: Display.cpp  Game.cpp  Graph.cpp  Player.cpp  Texture.cpp
